static/css/style.css
.text-shadow {
    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
}

.brand-logo {
    margin-left: 10px;
}

.flashes h4 {
    line-height: 2;
}

.view-recipe-img {
    width: 70%;
}

.card-content h6 {
    white-space: nowrap;
    font-weight: bold;
    text-decoration: underline;
}

.recipe-header {
    text-decoration: initial;
}

.ingrediants-text,
.method-text    {
    white-space: pre-wrap;
    text-align: left;
}

